{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 19,
  "lineage": "9104849f-3ef5-811f-a5b0-d99b0bd38051",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:495013583028:instance/i-041446993d88c8e90",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-041446993d88c8e90",
            "instance_id": "i-041446993d88c8e90",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "key_name": "java-spring-kp",
            "launch_time": "2026-06-21T17:54:27Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0623c5a5f3cd82177",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-8-212.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.212",
            "public_dns": "ec2-43-205-143-194.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.143.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02299536597a60e1b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bf4ffcdb135dfba",
            "tags": {
              "Name": "VM  Ecommerce"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fe408481fc8b427d"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495013583028:subnet/subnet-00bf4ffcdb135dfba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bf4ffcdb135dfba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495013583028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "java-spring-subnet-public1-ap-south-1a"
            },
            "vpc_id": "vpc-0714e469a68ae1721"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495013583028:vpc/vpc-0714e469a68ae1721",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0babc98d7f34ed4b2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0b288cf3c75ab0f25",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0714e469a68ae1721",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c6244867536ac8e",
            "owner_id": "495013583028",
            "tags": {
              "Name": "java-spring-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services_internal_existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow internal service communication on 3001-3004",
            "from_port": 3001,
            "id": "sgrule-466641086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe408481fc8b427d",
            "security_group_rule_id": "sgr-09fa41ffc8c340609",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3004,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "49.37.10.244/32"
            ],
            "description": "Allow SSH access for Terraform remote-exec",
            "from_port": 22,
            "id": "sgrule-745972438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe408481fc8b427d",
            "security_group_rule_id": "sgr-08624d5a12b7abd03",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}